--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/vue": "^1.4.0",
     "axios": "^1.6.2",
     "vue": "^3.3.11"
   },
