--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "vee-validate": "^4.12.3",
     "vue": "^3.3.11"
   },
   "devDependencies": {
