--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.12.3",
     "axios": "^1.6.2",
     "vee-validate": "^4.12.3",
     "vue": "^3.3.11"
