--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@vee-validate/zod": "^4.12.3",
     "axios": "^1.6.2",
     "vee-validate": "^4.12.3",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-multiselect": "^2.1.8"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
