--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.6.2",
     "vee-validate": "^4.12.3",
     "vue": "^3.3.11",
-    "vue-multiselect": "^2.1.8"
+    "vue-multiselect": "^2.1.8",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
