--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vee-validate/zod": "^4.12.3",
     "axios": "^1.6.2",
+    "pinia": "^2.1.7",
     "vee-validate": "^4.12.3",
     "vue": "^3.3.11",
     "vue-multiselect": "^2.1.8",
